fixed wrapping glitch / styled tags

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,6 +4,7 @@
 	font-size: 125%;
 }
 
-
-
-
+.tagButton{
+	margin-right: 10px;
+	margin-top: 5px;
+}
